<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sv_id"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_page_tiles" >

    <RelativeLayout
        android:id="@+id/rl_id"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="10px" >

        <TextView
            android:id="@+id/label_header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_header" />

        <EditText
            android:id="@+id/noticecreate_header_text_top"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label_header" />

        <ToggleButton
            android:id="@+id/noticecreate_lock"
            android:layout_width="wrap_content"
            android:checked="false"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/noticecreate_header_text_top"
            android:layout_centerVertical="true"
            android:layout_marginBottom="5dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="5dip"
            android:background="@drawable/btn_toggle"
            android:textOff=""
            android:textOn="" />

        <TextView
            android:id="@+id/label_edittext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/noticecreate_lock"
            android:layout_below="@+id/noticecreate_header_text_top"
            android:layout_marginTop="10px"
            android:layout_toLeftOf="@+id/noticecreate_lock"
            android:gravity="bottom|left"
            android:text="@string/label_edittext" />

        <EditText
            android:id="@+id/noticecreate_text_top"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/noticecreate_lock"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="top"
            android:imeOptions="flagNoExtractUi"
            android:inputType="textMultiLine"
            android:lines="10"
            android:scrollbars="vertical" />

        <Button
            android:id="@+id/noticecreate_save"
            style="@style/button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/noticecreate_text_top"
            android:layout_marginTop="10px"
            android:text="@string/button_save" />
        
    </RelativeLayout>

</ScrollView>